Finished task 4, implemented salvo

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -7,9 +7,16 @@
 
 </head>
 <body>
-<div id="title"></div>
 
-<div id="gridTable">
+<div class="container-fluid">
+    <div class="row">
+        <table id="gridShipTable" class="col-md-6">
+            <div id="title"></div>
+        </table>
+        <table id="gridSalvoTable" class="col-md-6 padding">
+
+        </table>
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
