--- a/src/main/resources/static/web/games.html
+++ b/src/main/resources/static/web/games.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Salvo</title>
+    <link rel=stylesheet type="text/css" href="style/styleGames.css">
 </head>
 <body>
 
 <ol id="output">
 </ol>
+
+<table id="leaderBoardTable">
+
+</table>
 
 
 
