Finished task 1 of module 2

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+<form id="logout-form">
+    <button id="logoutButton">Log out</button>
+</form>
+
 <div class="container-fluid">
     <div class="row">
         <table id="gridShipTable" class="col-md-6">
