--- a/src/main/resources/static/web/games.html
+++ b/src/main/resources/static/web/games.html
@@ -7,6 +7,21 @@
 </head>
 <body>
 
+<form id="login-form">
+    <label>Name: <input type="text" name="username" id="userName" ></label>
+    <label>Password: <input type="text" name="password" id="password"></label>
+    <button type="button" id="loginButton">Login</button>
+    <button type="button" id="signupButton">Sign up</button>
+</form>
+
+<ol id="playerName">
+</ol>
+
+<form id="logout-form" >
+    <button id="logoutButton">Log out</button>
+</form>
+
+
 <ol id="output">
 </ol>
 
