Create new game,join and rejoin game

--- a/src/main/resources/static/web/games.html
+++ b/src/main/resources/static/web/games.html
@@ -29,6 +29,10 @@
 
 </table>
 
+<form id="createGame-form" >
+    <button id="createGameButton">Create Game</button>
+</form>
+
 
 
 <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
