Drag and drop - horizontal way, I can still drag to the neighbour one

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -12,6 +12,12 @@
     <button id="logoutButton">Log out</button>
 </form>
 
+<div id="shipsDrag" ondragover="allowDrop(event)">
+
+</div>
+
+<div id="drag1" draggable="true" ondragstart="drag(event)"></div>
+
 <div class="container-fluid">
     <div class="row">
         <table id="gridShipTable" class="col-md-6">
